  * Add serdi -f option to prevent URI qualification
  * Remove use of multi-byte peek (readahead) and use exactly 1 page for
    read buffer (instead of 2)
  * Handle a quote as the last character of a long string literal in the
    writer (by escaping it) rather than the reader, to avoid writing Turtle
    other tools fail to parse.
  * Add serd_strtod(), serd_node_new_decimal(), and serd_node_new_integer()
    for locale-independent numeric node parsing/serialising.
  * Add serd_file_sink for the common case of writing to a FILE* stream.
  * Escape ASCII control characters in output (e.g. fix problems with string
    literals that start with a backspace)
  * Improve URI resolution to cover most of the abnormal cases from RFC3986
  * Support file://localhost/foo URIs in serd_uri_to_path()
  * Support Windows file://c:/foo URIs in serd_uri_to_path() on all platforms
  * Add serd_node_new_blob and serd_base64_decode for handling arbitrary
    binary data via base64 encoding.
  * Support compilation as C++ under MSVC++.
  * Impement pretty-printing for collections.

 -- David Robillard <d@drobilla.net>  (UNRELEASED)

serd (0.5.0) unstable; urgency=low

  * Fix pretty printing of successive blank descriptions, i.e. "] , ["
  * Avoid writing illegal Turtle names as a result of URI qualifying
  * Gracefully handle NULL reader sinks
  * Add serd_strerror
  * Add serd_env_set_prefix_from_strings for convenience
  * Fix erroneously equal SERD_ERR_BAD_SYNTAX and SERD_ERR_BAD_ARG
  * Add ability to build static library

 -- David Robillard <d@drobilla.net>  Thu, 29 Sep 2011 00:00:00 -0400

serd (0.4.2) unstable; urgency=low

  * Fix compilation issues on some systems
  * Fix build system Python 3 compatibility

 -- David Robillard <d@drobilla.net>  Wed, 25 May 2011 19:00:00 -0400

serd (0.4.0) unstable; urgency=low

  * Initial release

 -- David Robillard <d@drobilla.net>  Tue, 24 May 2011 23:00:00 -0400