@@ -1,3 +1,4 @@
+<http://www.w3.org/1999/02/22-rdf-syntax-ns#nil> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://example.org/List> .
 _:genid1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#first> "apple" .
 _:genid1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#rest> _:genid2 .
 _:genid2 <http://www.w3.org/1999/02/22-rdf-syntax-ns#first> "banana" .
