@@ -1,1 +1,2 @@
+() a <http://example.org/List> .
 ("apple" "banana") a <http://example.org/List> .
