@@ -24,7 +24,8 @@ serd (UNRELEASED) unstable; urgency=low
   * Add serd_node_new_blob and serd_base64_decode for handling arbitrary
     binary data via base64 encoding.
   * Support compilation as C++ under MSVC++.
-  * Impement pretty-printing for collections.
+  * Implement pretty-printing for collections.
+  * Use iterative algorithm for collection parsing.
 
  -- David Robillard <d@drobilla.net>  (UNRELEASED)
 
